# converter

./: INSTALL.md  README.md  meson.build  meson_options.txt
data/: config.json  converter.appdata.xml  converter.desktop
src/: App.vala  ConvertHandle.vala  ConvertOpts.vala  FileEntry.vala  FileList.vala  MainWindow.vala  Toast.vala
